# xostat

./: .gitignore  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json
.github/workflows/: defaults.run  workflow.yml
local-config/: create-local-dynamodb-table.py
xostat-client/: package-lock.json  package.json  tsconfig.json
xostat-client/public/: index.html
xostat-client/public/css/: dark.css  dark.css.map  light.css  light.css.map
xostat-client/src/: App.css  App.js  App.tsx  i18n.ts  routes.tsx
xostat-client/src/components/: Code.tsx  Content.tsx  Footer.tsx  Main.tsx  Settings.tsx  Wrapper.tsx
xostat-client/src/contexts/: Auth0Context.tsx  CognitoContext.tsx  FirebaseAuthContext.tsx  JWTContext.tsx  LayoutContext.tsx  SidebarContext.tsx  ThemeContext.tsx
xostat-client/src/hooks/: useAppDispatch.ts  useAppSelector.ts  useLocalStorage.ts  useOuterClick.ts  useSettingsState.ts
xostat-client/src/layouts/: Auth.tsx  Dashboard.tsx  Doc.tsx  Landing.tsx
xostat-client/src/mocks/: auth.ts
xostat-client/src/redux/: store.ts
xostat-client/src/types/: auth.ts  sidebar.ts  (+1 more)
xostat-lambda/: sample-data.json  sample-upload.py
xostat-lambda-api/: .gitignore  README.md  item_definitions.py  load_static_assets.py  player_stats.py  profile.py  requirements.txt  s_getUploadRecords.py  s_loadCks.py  s_uploadMatch.py  serverless.yml  upload.py
xostat-lambda-api/classes/: item.py  player_match.py  player_profile copy.py  player_profile.py  upload_return.py  xo_activity.py  xo_item.py
xostat-lambda-api/controllers/: player.py  profile.py  upload.py
xostat-lambda-api/devops/: .gitignore  README.md
xostat-lambda-api/lib/: database.py  response.py
xostat-lambda-api/models/: builds.py  decoder.py  match_player_resources.py  match_players.py  matches.py  medals.py  parts.py  player_match.py  player_profile.py  player_round_damages.py  player_round_medals.py  player_round_scores.py  player_rounds.py  player_stats.py  resources.py  round_player_damages.py  round_player_medals.py  round_player_scores.py  round_players.py  rounds.py  scores.py  uploadSchema.json  uploads.py  weapons.py
xostat-lambda-api/python/: .gitignore  README.md  requirements.txt
xostat-lambda-api/rust/: BuildService.ps1  Cargo.toml  Dockerfile  README.md  build.md
xostat-lambda-api/rust/shared-logic/: Cargo.toml  build.rs  sqlx-data.json
xostat-lambda-api/rust/shared-logic/src/: coins.rs  lib.rs  resource_map.rs
xostat-lambda-api/rust/shared-logic/src/database/: mod.rs
xostat-lambda-api/rust/test-db-query/: Cargo.toml  test.json
xostat-lambda-api/rust/test-db-query/src/: main.rs
xostat-lambda-api/rust/updateResourcePrices/: Cargo.toml  sqlx-data.json
xostat-lambda-api/rust/updateResourcePrices/src/: main.rs
xostat-lambda-api/schema/: uploadSchema.json
(+224 files in other folders)
