[package]
name = "shared-logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

[build-dependencies]
const-gen = { version = "1.3.0", features = ["phf"] }
