[package]
name = "shared-logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "uuid", "offline"] }
lambda_runtime = "0.8.0"
tokio = "1.28.2"
tracing = { version = "0.1", features = ["log"] }

[build-dependencies]
const-gen = { version = "1.3.0", features = ["phf"] }
