[package]
name = "update-resource-prices"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.lambda.env]
DATABASE_URL = "postgres://dev:devpass1@localhost:5432/xodat" # For query macro to validate against dev DB
DB_HOST = "localhost"
DB_PORT = "5432"
DB_NAME = "xodat"
DB_USER = "dev"
DB_PASSWORD = "devpass1"

[dependencies]
aws-config = "0.55.2"
lambda_http = { version = "0.8.0", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "uuid", "offline"] }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }

shared-logic = {path = "../shared-logic"}
reqwest = { version = "0.11.18", features = ["rustls"], default-features = false }
